# SpotifyRecommendation

./: .gitignore  README.md  Recommender.py  SinglyLinkedList.py  Stack.py  example.db  lyricDB.py  main.py  pyproject.toml  requirements.txt
static/: index.css  playlist_select.css  recommendations.css  styles.css
templates/: index.html  layout.html  playlist_select.html  recommendations.html
