[project]
name = "spotifyrecommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "flask==3.0.2",
    "pandas>=2.2.3",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "sentence-transformers>=4.0.2",
    "spotipy==2.25.1",
    "voyager>=2.1.0",
]
